# sgpu

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile.gpu-monitor
k8s/: gpu-monitor.yaml
scripts/: gpu-monitor-local.ps1  install-sgpu.ps1  install-sgpu.sh  sgpu.ps1
sgpu/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_statsagg.py  test_statsdb.py  test_tui_anim.py
tools/: render_readme_images.py
tools/gpu-monitor/: collector.py  kube.py  render.py  server.py  statsagg.py  statsdb.py  tui.py
