[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sgpu"
version = "0.7.3"
description = "Simple GPU monitor for the SGVR H200 lab (MLXP) - kubectl-native dashboards, in-pod TUI, per-user usage stats"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "alex6095" }]
keywords = ["gpu", "kubernetes", "monitoring", "nvml", "nvitop", "h200"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]

[project.scripts]
sgpu = "sgpu.cli:main"

[project.urls]
Homepage = "https://github.com/alex6095/sgpu"
Repository = "https://github.com/alex6095/sgpu"

[tool.setuptools]
packages = ["sgpu"]
